fixed weird hover bug on mobile size desktop browser

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,6 @@ button:active {
   }
 
   .light:not(.on):hover {
-    opacity: initial;
+    opacity: .1;
   }
 }
